--- a/WebAppManager/Views/Shared/_Layout.cshtml
+++ b/WebAppManager/Views/Shared/_Layout.cshtml
@@ -19,6 +19,7 @@
     <link href="~/assets/global/css/components-rounded.min.css" rel="stylesheet" id="style_components" type="text/css" />
     <link href="~/assets/global/css/plugins.min.css" rel="stylesheet" type="text/css" />
     <!-- END THEME GLOBAL STYLES -->
+    <link href="~/assets/global/plugins/bootstrap-fileinput/bootstrap-fileinput.css" rel="stylesheet" type="text/css" />
     <!-- BEGIN THEME LAYOUT STYLES -->
     <link href="~/assets/layouts/layout5/css/layout.min.css" rel="stylesheet" type="text/css" />
     <link href="~/assets/layouts/layout5/css/custom.min.css" rel="stylesheet" type="text/css" />
@@ -56,6 +57,7 @@
     <!-- END THEME GLOBAL SCRIPTS -->
     <!-- BEGIN PAGE LEVEL SCRIPTS -->
     <script src="~/assets/pages/scripts/dashboard.min.js" type="text/javascript"></script>
+    <script src="~/assets/global/plugins/bootstrap-fileinput/bootstrap-fileinput.js" type="text/javascript"></script>
     <!-- END PAGE LEVEL SCRIPTS -->
     <!-- BEGIN THEME LAYOUT SCRIPTS -->
     <script src="~/assets/layouts/layout5/scripts/layout.min.js" type="text/javascript"></script>
